Fix Send button on chat on safari - [179624058] (#683)
* force height on chat input so its consistent with the send button

* fix tab carousel bottom section height

--- a/src/routes/habitat/components/CardTabs/tabs/style.scss
+++ b/src/routes/habitat/components/CardTabs/tabs/style.scss
@@ -100,6 +100,7 @@
     background: white;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+    flex: 1 0;
 
     h4 {
       margin: 0;
